# pylibwdi

./: README.md  meson.build  meson_options.txt  pyproject.toml
src/: libwdi.pxd  pylibwdi.pyx
test/: driver_packaging.py  enumeration.py
