[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python',
    'meson>=1.3.0rc1',
    'setuptools-git-versioning<2',
    'cython>=3.0.0b1',
]

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
count_commits_from_version_file = true

[tool.meson-python]
limited-api = false # doesn't work, for some reason?

[tool.meson-python.args]
setup = [
    '-Dlibwdi:default_library=static', # do not change this unless you know what you're doing
    '-Dlibwdi:winusb_path=C:\\Program Files (x86)\\Windows Kits\\8.0',
    '-Dlibwdi:build_examples=false',
]

[project]
name = 'pylibwdi'
dynamic = ['version']
description = 'Unofficial Python bindings to libwdi'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE.txt'}
authors = [
    {name = 'Andrew (PyroAVR) Meyer', email = 'ahm7197@rit.edu'},
]
